2.26可正常使用版本